k8sv2/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: annotations
    tier: frontend
spec:
  ports:
  - port: 443
    targetPort: 8080
    protocol: TCP
  selector:
    app: annotations
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: annotations
      tier: frontend
  replicas: 6
  template:
    metadata:
      labels:
        app: annotations
        tier: frontend
    spec:
      containers:
      - name: frontend
        image: us.icr.io/cloud-annotations/frontend:stage2
        imagePullPolicy: Always
        # imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
